--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 				</div>
 				<div class="nav">
 					<ul class="reset">
-						<li><a href="#">Home</a></li>
-						<li><a href="#">Drinks</a></li>
-						<li><a href="#">About</a></li>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="#drnk">Drinks</a></li>
+						<li><a href="#abt">About</a></li>
 					</ul>
 				</div>
 				<div class="con">
-					<a href="#">Contact Us</a>
+					<a href="#call">Contact Us</a>
 				</div>
 				<!-- <div class="clear"></div> -->
 			</div>
@@ -94,7 +94,7 @@ dark beer">
 			</div>
 		</div>
 
-		<div class="sec3">
+		<div class="sec3" id="abt">
 			<div class="container">
 				<div class="sale">
 					<div class="imgbox">
@@ -202,7 +202,7 @@ dark beer">
 			</div>
 		</div>
 
-		<div class="sec6">
+		<div class="sec6" id="drnk">
 			<div class="container">
 				<div class="menu">
 					<ul class="reset">
@@ -298,7 +298,7 @@ dark beer">
 				</div>
 			</div>
 		</div>
-		<div class="sec9">
+		<div class="sec9" id="call">
 			<div class="container">
 				<h3>newsletter</h3>
 				<div class="formsec">
